# irrigatron

./: .travis-example.yml  .travis.yml  Cargo.toml  README.md  config.txt  irrigatron.service  wlan  wpa_supplicant.conf
assert/: app.ui  app.ui~
assert/calender/1/: README.txt  index.haml  index.html  license.txt
assert/calender/1/css/: style.css
assert/calender/1/js/: index.js
ci/: create-image.sh  setup
scripts/: build-and-copy-to-pi.sh
src/: api.rs  banner.rs  binance.rs  config.rs  epdhead.rs  gtkdash.rs  hcsr501.rs  lib.rs  logger.rs  rule.rs  wdash.rs
src/gpio/: mod.rs
src/weg/: epd2in9.rs
